--- a/swconcorrente-2018-1/src/br/ufg/inf/swconcorrente/decriptador/ui/view/DecriptadorConsoleView.form
+++ b/swconcorrente-2018-1/src/br/ufg/inf/swconcorrente/decriptador/ui/view/DecriptadorConsoleView.form
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="br.ufg.inf.swconcorrente.decriptador.ui.view.DecriptadorConsoleView">
-  <grid id="27dc6" binding="dcrptPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="dcrptPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-16448250"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="c0758" class="javax.swing.JLabel" binding="lblTitle">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Monospaced" size="22"/>
+          <foreground color="-16598260"/>
           <horizontalAlignment value="0"/>
-          <text value="COLE O TEXTO ABAIXO PARA DECRIPTAR"/>
+          <text value="COLE O TEXTO ABAIXO PARA CONVERTER"/>
         </properties>
       </component>
       <component id="2340" class="javax.swing.JTextArea" binding="txtOutput">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
@@ -28,26 +31,67 @@
           <background color="-16448250"/>
           <font name="Monospaced"/>
           <foreground color="-16598260"/>
+          <text value="SAÍDA DE TEXTO"/>
         </properties>
       </component>
       <component id="cc5eb" class="javax.swing.JTextField" binding="txtInput">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
+          <background color="-16777216"/>
+          <columns value="1"/>
           <font name="Monospaced"/>
+          <foreground color="-16598260"/>
+          <text value=""/>
           <toolTipText value="Texto a Decriptar"/>
         </properties>
       </component>
       <component id="78b2f" class="javax.swing.JButton" binding="btnEnviar">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Monospaced"/>
           <text value="DECRIPT"/>
+        </properties>
+      </component>
+      <hspacer id="f83ad">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="54668">
+        <constraints>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="b461d" class="javax.swing.JSeparator">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="2" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16598260"/>
+        </properties>
+      </component>
+      <component id="9cc19" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16448250"/>
+          <text value="Label"/>
+        </properties>
+      </component>
+      <component id="2d095" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-16448250"/>
+          <text value="Label"/>
         </properties>
       </component>
     </children>
