--- a/swconcorrente-2018-1/src/br/ufg/inf/swconcorrente/mainPainel/ui/view/MainPainelListView.form
+++ b/swconcorrente-2018-1/src/br/ufg/inf/swconcorrente/mainPainel/ui/view/MainPainelListView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="br.ufg.inf.swconcorrente.mainPainel.ui.view.MainPainelListView">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -34,6 +34,15 @@
         <properties>
           <font name="Monospaced" size="22"/>
           <text value="Abrir Decriptador"/>
+        </properties>
+      </component>
+      <component id="37f53" class="javax.swing.JButton" binding="btnEncript">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Monospaced" size="22"/>
+          <text value="Abrir Encriptador"/>
         </properties>
       </component>
     </children>
