--- a/swconcorrente-2018-1/src/br/ufg/inf/swconcorrente/prevtemp/ui/view/PrevTempConsoleView.form
+++ b/swconcorrente-2018-1/src/br/ufg/inf/swconcorrente/prevtemp/ui/view/PrevTempConsoleView.form
@@ -2,67 +2,99 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="br.ufg.inf.swconcorrente.prevtemp.ui.view.PrevTempConsoleView">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="528" height="400"/>
+      <xy x="20" y="20" width="502" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="244fd" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="South"/>
-        <properties/>
+        <properties>
+          <background color="-1"/>
+        </properties>
+        <clientProperties>
+          <html.disable class="java.lang.Boolean" value="true"/>
+        </clientProperties>
         <border type="none"/>
         <children>
           <component id="c95a3" class="javax.swing.JComboBox" binding="cbxCidades">
             <constraints border-constraint="Center"/>
             <properties>
+              <autoscrolls value="true"/>
               <editable value="false"/>
               <enabled value="true"/>
+              <foreground color="-16315830"/>
               <model>
                 <item value="Selecione uma cidade:"/>
               </model>
+              <opaque value="true"/>
+              <popupVisible value="false"/>
               <toolTipText value="Cidades disponíveis"/>
             </properties>
           </component>
           <component id="ee581" class="javax.swing.JLabel">
             <constraints border-constraint="West"/>
             <properties>
+              <font name="Consolas" size="20" style="1"/>
+              <foreground color="-16315830"/>
               <text value="  CIDADES:  "/>
             </properties>
           </component>
-          <vspacer id="b9e7b">
-            <constraints border-constraint="North"/>
-          </vspacer>
-          <vspacer id="ef821">
+          <component id="f4be9" class="javax.swing.JToolBar$Separator">
+            <constraints border-constraint="East"/>
+            <properties/>
+          </component>
+          <component id="dc207" class="javax.swing.JToolBar$Separator">
             <constraints border-constraint="South"/>
-          </vspacer>
+            <properties/>
+          </component>
+          <component id="4c65e" class="javax.swing.JToolBar$Separator">
+            <constraints border-constraint="North"/>
+            <properties/>
+          </component>
         </children>
       </grid>
       <component id="108dd" class="javax.swing.JLabel" binding="lblTitle">
         <constraints border-constraint="North"/>
         <properties>
           <font name="Neo Sans Std" size="24" style="1"/>
+          <foreground color="-16315830"/>
           <horizontalAlignment value="0"/>
-          <text value="PREVISÃO DO TEMPO"/>
+          <preferredSize width="242" height="50"/>
+          <text value="PREVISÃO DO TEMPO:"/>
+          <toolTipText value="Relatório em tempo real"/>
+          <verifyInputWhenFocusTarget value="true"/>
+          <verticalAlignment value="0"/>
+          <verticalTextPosition value="0"/>
         </properties>
         <clientProperties>
           <html.disable class="java.lang.Boolean" value="false"/>
         </clientProperties>
       </component>
-      <component id="456ee" class="javax.swing.JTextArea" binding="txtRelatorio">
+      <component id="e3546" class="javax.swing.JTextArea" binding="txtRelatorio">
         <constraints border-constraint="Center"/>
         <properties>
+          <background color="-16315830"/>
           <editable value="false"/>
-          <lineWrap value="true"/>
+          <font name="Consolas"/>
+          <foreground color="-1"/>
+          <margin top="10" left="10" bottom="10" right="10"/>
+          <selectedTextColor color="-16315830"/>
+          <selectionColor color="-1"/>
           <text value="RELATORIO"/>
           <toolTipText value="Relatório em tempo real"/>
         </properties>
       </component>
-      <hspacer id="d2b4e">
-        <constraints border-constraint="West"/>
-      </hspacer>
-      <hspacer id="3a146">
+      <component id="2da7c" class="javax.swing.JToolBar$Separator">
         <constraints border-constraint="East"/>
-      </hspacer>
+        <properties/>
+      </component>
+      <component id="c1f0a" class="javax.swing.JToolBar$Separator">
+        <constraints border-constraint="West"/>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
